@@ -96,6 +96,7 @@ production.
 * (bug 29221) Expose oldrevid in watchlist output
 * (bug 29267) always give the servername for meta=siteinfo&siprop=dbrepllag
 * (bug 28897) rvparse doesn’t seem to work with rvsection
+* (bug 25734) API: possible issue with revids validation
 
 === Languages updated in 1.19 ===
 
